# rsty-stack-example

todo_api/: Cargo.toml
todo_web/: Cargo.toml
