[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
surrealdb = "2.0.4"
thiserror = "1.0.65"