[package]
name = "todo_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
yew = { version = "0.21.0" }
reqwasm = "0.5.0"
serde = { version = "1.0.213", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
surrealdb = "2.0.4"
